# chae-bot

./: .env.example  .gitignore  HOWTO.md  README.md  launch.bat  pyproject.toml
.claude/commands/: fas.md  general.md  trihybrid.md
data/: seed_papers.yaml
docs/: app.js  index.html  meta.json  papers.json  personas.json  style.css
prompts/: fas.md  general.md  trihybrid.md
src/research_bot/: _models.py  _rag.py  chunking.py  cli.py  config.py  external.py  ingest.py  llm.py  memory.py  retrieve.py
src/research_bot/bots/: __init__.py  fas.py  general.py  trihybrid.py
src/research_bot/scripts/: build_pages.py  download_papers.py
src/research_bot/webui/: server.py
src/research_bot/webui/static/: app.js  index.html  style.css
